--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ after_deploy:
 - "rm -f RELEASE"
 env:
   global:
-    secure: hhFhgyLXEf3CAQdiHhSXi7sS6E0Jo2t7xMz3rExdM8oUH+caKd+V1NOY23JItuljVwXTorOAZyNnvPdAVwwWEGX5haNk3s++YrBaaXb6YAv8isUNgNkthxRwc9h2ILy0R53I3OHrkA9r9DJTPo5hjrmzLtYOQScdxJPt03nKUyo=
+    secure: "grlke3kFMrCR0tbJn5O7INcfqi+BEA+PLERhQfWSMAxDw9lzu/GFciPU/taUsIZKYhRhW30qR8jwHf+kNwGC+i94B351CP396e9Lgjy3FEgVQlFs0YBJM7sp2StE4g7PPU+NGnmBtlHWFd1Ybhu+y147/iy/C6MngAMfbRh6B/c="
